CHANGELOG:
v1.11 Fixes & Features
   - network now follows R conventions for exporting some of its C-level API functions for use by other packages
   - get.inducedSubgraph() now has an optional 'eid' argument for inducing a network including specified edges and their incident vertices
   - fixed bug in as.network.matrix that caused it to ignore the na.rm argument.
v1.10 Fixes
   - fixed vertex label plotting bug when vertices have the same positions
   - added dimension checks and more informative error for as.network.matrix for case when it assumes a square edgelist is an adjacency matrix
   - added dependency on statnet.common library to facilitate some development testing
   - The 'modify in place' syntax for network functions that modify their arguments now works correctly when the network to be modified is an element of a list
   - Modified plot.network.default so that if a single value is passed in that matches with a vertex attribute name, the value of the attribute will be used (to make it consistent with the rest of the plot arguments)
   - Fix to C-level stack protection bug in delete.vertices that could cause crashes under some conditions
   - removed $<-.network assignment operator so that dispatch will occur via R internals. 
   - Fix stack protection overflow in set.edge.value. Also check for correct dimension on value argument for set.edge.value.
   - Minor documentation fixes
v1.9 Features & Fixes
  New Features
    - minor tweak to print.network to not show summary information for net.obs.period and .active attributes when called from network dynamic
    - add.vertices, add.edge, and add.edges have been converted to S3 methods
    - set.vertex.attributes and set.edge.attributes can now modify a list of on a network attributes with a single call